--- a/src/screens/Dashboard.module.css
+++ b/src/screens/Dashboard.module.css
@@ -497,6 +497,12 @@ table td {
     font-weight:lighter;
 }
 
+.activeicon{
+    background-color: rgb(109, 156, 109);
+    color:#fff;
+    border-radius: 3px;
+}
+
 
 
 
