--- a/src/screens/TransactionHistory.module.css
+++ b/src/screens/TransactionHistory.module.css
@@ -223,7 +223,11 @@ table td {
 }
 
 
-
+.activeicon{
+    background-color: rgb(109, 156, 109);
+    color:#fff;
+    border-radius: 3px;
+}
 
 
 /* small laptop screens */
