--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,12 @@ input:-webkit-autofill:active{
 }
 
 
+
+/*animation code*/
 .loaders {
   background-color: rgb(235, 255, 235);
-  width:130px;
-  height:130px;
+  width:220px;
+  height:220px;
   border-radius:120%;
   animation: load infinite 3s linear;
   display: flex;
@@ -35,8 +37,8 @@ input:-webkit-autofill:active{
 }
 
 .loader-inner{
-  width:90px;
-  height:90px;
+  width:170px;
+  height:170px;
   background-color: rgb(220, 255, 220);
   display: flex;
   justify-content: center;
@@ -45,8 +47,8 @@ input:-webkit-autofill:active{
 }
 
 .loader-inner-inner{
-  width:60px;
-  height:60px;
+  width:120px;
+  height:120px;
   background-color: rgb(109, 156, 109);
   display: flex;
   justify-content: center;
@@ -58,65 +60,116 @@ input:-webkit-autofill:active{
 
 .loaders span{
   color:#fff;
-  font-size: 1.5rem;
+  font-size: 3rem;
 }
 
 @keyframes load {
 
   0% {
-    width:60px;
-    height:60px; border-radius:100%;
-  }
-
-  10% {
-    width:80px;
-    height:80px; border-radius:100%;
-  }
-
-  20% {
-    width:100px;
-    height:100px; border-radius:100%;
-  }
-
-  30% {
     width:120px;
     height:120px; border-radius:100%;
   }
 
-  40% {
-    width:135px;
-    height:135px; border-radius:100%;
-  }
-
-  50% {
+  10% {
     width:140px;
     height:140px; border-radius:100%;
   }
 
+  20% {
+    width:160px;
+    height:160px; border-radius:100%;
+  }
+
+  30% {
+    width:180px;
+    height:180px; border-radius:100%;
+  }
+
+  40% {
+    width:200px;
+    height:200px; border-radius:100%;
+  }
+
+  50% {
+    width:220px;
+    height:220px; border-radius:100%;
+  }
+
   60% {
-    width:135px;
-    height:135px; border-radius:100%;
+    width:200px;
+    height:200px; border-radius:100%;
   }
 
   70% {
-    width: 120px;
-    height:120px; border-radius:100%;
+    width: 180px;
+    height:180px; border-radius:100%;
   }
 
   80% {
-    width:100px;
-    height:100px; border-radius:100%;
+    width:160px;
+    height:160px; border-radius:100%;
   }
 
   90% {
-    width:80px;
-    height:80px; border-radius:100%;
+    width:140px;
+    height:140px; border-radius:100%;
   }
 
   100% {
-    width:60px;
-    height:60px; border-radius:100%;
+    width:120px;
+    height:120px; border-radius:100%;
   }
+}
+
+/* home military image gallery section */
+
+.military-img-con{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.military-img-innercon{
+  width:85%;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  text-align: center;
+  column-gap:1%;
+  row-gap: 1%;
+  margin-bottom: 10px;
+}
+
+.box{
+  height: 200px;
+  width:100%;
+  overflow: hidden;
+
+  
+}
+
+
+@media screen and (max-width: 570px) {
+  
+
+  .military-img-innercon{
+    width:95%;
+    display: grid;
+    grid-template-columns: 100%;
+  }
+ 
+ 
+
+
+}
+
+
+@media screen and (max-width: 350px) {
+
+  
+
 
 
 
